--- a/results.html
+++ b/results.html
@@ -1,32 +1,21 @@
-<!-- ===============================
-     results.html
-     =============================== -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Results • ONIX Marketing</title>
-  <meta name="description" content="Real proof. Real outcomes. Unedited screenshots and reviews across niches." />
+  <title>Results • ONIX</title>
+  <meta name="description" content="Real proof and outcomes from the ONIX system — screenshots, reviews, and the process behind it." />
   <link rel="icon" href="logo2.png" type="image/png" />
 
+  <!-- IMPORTANT: this MUST be the correct path -->
   <link rel="stylesheet" href="styles.css" />
 
-  <!-- Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
-
-  <script>
-    window.BOOKING_URL = "https://calendly.com/jordan-burkett";
-  </script>
 </head>
 
 <body>
-  <!-- Tooltip -->
-  <div id="chartTip" class="chart-tip" aria-hidden="true"></div>
-
-  <!-- Global animated background -->
   <div class="site-bg" aria-hidden="true">
     <div class="site-aurora"></div>
     <div class="site-noise"></div>
@@ -35,11 +24,10 @@
   <!-- HEADER -->
   <header class="header">
     <div class="header-inner">
-      <a href="index.html" aria-label="ONIX Marketing home">
-        <img src="logo2.png" alt="ONIX Marketing" class="logo" />
+      <a href="index.html" aria-label="ONIX home">
+        <img src="logo2.png" alt="ONIX" class="logo" />
       </a>
 
-      <!-- Mobile hamburger -->
       <button class="nav-toggle" id="navToggle" aria-label="Open menu" aria-expanded="false" aria-controls="siteNav" type="button">
         <svg width="26" height="26" viewBox="0 0 24 24" fill="none" aria-hidden="true">
           <path d="M4 7h16M4 12h16M4 17h16" stroke="currentColor" stroke-width="2.2" stroke-linecap="round"/>
@@ -50,98 +38,66 @@
         <a href="results.html" aria-current="page">Results</a>
         <a href="index.html#how">How it works</a>
         <a href="index.html#pricing">Pricing</a>
-        <a href="#book" class="btn-primary" data-book>Book a Call</a>
+        <a href="#book" class="btn-primary">Book a Call</a>
       </nav>
     </div>
   </header>
 
   <!-- HERO -->
-  <section class="hero" id="top" style="padding: 110px 20px 70px;">
-    <div class="hero-inner" style="grid-template-columns: 1.05fr 0.95fr;">
+  <section class="hero" style="padding: 110px 20px 70px;">
+    <div class="hero-inner" style="grid-template-columns: 1.1fr 0.9fr;">
       <div class="hero-copy">
         <span class="pill">⭐ Proof library</span>
-        <h1>Results you can actually verify.</h1>
+        <h1>Real results. Real screenshots.</h1>
         <p>
-          No stock testimonials. No polished case study fluff.
-          Just unedited screenshots + written reviews across niches — showing what happens when follow-up is handled properly.
+          No stock testimonials. No “trust me bro” marketing.
+          These are unedited messages and outcomes from clients — across niches.
         </p>
 
         <div class="hero-cta">
-          <a class="btn-primary large" href="#book" data-book>Book a 15-minute call</a>
+          <a class="btn-primary large" href="#book">Book a 15-minute call</a>
           <a class="btn-secondary" href="#proof">See proof</a>
           <a class="btn-secondary" href="#reviews">Read reviews</a>
-        </div>
-
-        <div class="logos" style="margin-top:18px;">
-          <div class="logo-chip">Tradies</div>
-          <div class="logo-chip">Solar</div>
-          <div class="logo-chip">Agencies</div>
-          <div class="logo-chip">Local Services</div>
-          <div class="logo-chip">Real Estate</div>
-          <div class="logo-chip">Insurance</div>
-          <div class="logo-chip">Mortgages</div>
-          <div class="logo-chip">Medical</div>
         </div>
       </div>
 
       <div class="hero-visual">
-        <div class="dashboard-card hero-dashboard" style="max-width:560px;">
-          <div class="kpi" data-tip="Proof is strongest when it’s consistent.">
-            <div class="kpi-top">
-              <span class="kpi-icon">📌</span>
-              <span class="label">What you’ll see</span>
-              <span class="delta flat">Live</span>
-            </div>
-            <span class="value" style="font-size:18px; color: var(--ink); font-weight:950;">Screenshots + reviews</span>
-          </div>
-
-          <div class="kpi">
-            <div class="kpi-top">
-              <span class="kpi-icon">⚡</span>
-              <span class="label">Speed-to-lead focus</span>
-              <span class="delta up">Key</span>
-            </div>
-            <span class="value" style="font-size:18px; color: var(--ink); font-weight:950;">Minutes, not hours</span>
-          </div>
-
-          <div class="kpi">
-            <div class="kpi-top">
-              <span class="kpi-icon">📅</span>
-              <span class="label">Outcome</span>
-              <span class="delta up">Booked</span>
-            </div>
-            <span class="value" style="font-size:18px; color: var(--ink); font-weight:950;">Qualified calls</span>
-          </div>
-
-          <div class="kpi">
-            <div class="kpi-top">
-              <span class="kpi-icon">🧠</span>
-              <span class="label">System</span>
-              <span class="delta flat">Daily</span>
-            </div>
-            <span class="value" style="font-size:18px; color: var(--ink); font-weight:950;">Managed follow-up</span>
-          </div>
-
+        <div class="dashboard-card hero-dashboard" style="max-width: 560px;">
           <div class="chart-card">
             <div class="chart-header">
-              <h4>Proof pages</h4>
-              <span class="chip">12 screenshots</span>
+              <h4>What you’ll get</h4>
+              <span class="chip">Transparent</span>
             </div>
-            <p style="margin:0; color: var(--muted); font-weight:700; font-size:13.5px;">
-              Scroll below for the full proof wall + written reviews.
-            </p>
+            <div class="mini-grid" style="display:grid; grid-template-columns:1fr 1fr; gap:12px; margin-top:12px;">
+              <div class="kpi">
+                <div class="kpi-top"><span class="kpi-icon">📌</span><span class="label">Proof wall</span></div>
+                <span class="value" style="font-size:18px; font-weight:950;">Screenshots</span>
+              </div>
+              <div class="kpi">
+                <div class="kpi-top"><span class="kpi-icon">⭐</span><span class="label">Reviews</span></div>
+                <span class="value" style="font-size:18px; font-weight:950;">Written + readable</span>
+              </div>
+              <div class="kpi">
+                <div class="kpi-top"><span class="kpi-icon">⚡</span><span class="label">Speed to lead</span></div>
+                <span class="value" style="font-size:18px; font-weight:950;">Minutes</span>
+              </div>
+              <div class="kpi">
+                <div class="kpi-top"><span class="kpi-icon">📅</span><span class="label">Outcome</span></div>
+                <span class="value" style="font-size:18px; font-weight:950;">Booked calls</span>
+              </div>
+            </div>
           </div>
 
-          <div class="widget">
+          <div class="widget" style="margin-top:14px;">
             <div class="widget-head">
-              <span class="widget-title">Next step</span>
-              <span class="widget-pill">Simple</span>
+              <span class="widget-title">Want this?</span>
+              <span class="widget-pill">Next step</span>
             </div>
             <p style="margin:0; color: var(--muted); font-weight:700; font-size:13.5px;">
-              Want similar results? Book a call and we’ll show you the exact engine for your niche.
+              Book a quick call and we’ll map the exact industry setup + show what to expect.
             </p>
             <div style="margin-top:12px;">
-              <a class="btn-primary" href="#book" data-book style="display:inline-block;">Book a call</a>
+              <a class="btn-primary" href="#book" style="display:inline-block;">Book a call</a>
             </div>
           </div>
         </div>
@@ -149,160 +105,83 @@
     </div>
   </section>
 
-  <!-- PROOF IMAGES 1-12 -->
-  <section class="section section-proofwall" id="proof" aria-label="Proof screenshots">
+  <!-- PROOF WALL -->
+  <section class="section section-proofwall" id="proof">
     <div class="container">
-      <div class="proofwall-head reveal">
+      <div class="proofwall-head">
         <p class="kicker">Proof</p>
-        <h2>Unedited screenshots (1–12).</h2>
-        <p class="sub">Exactly as received — no redesign, no rewriting.</p>
+        <h2>Unedited screenshots</h2>
+        <p class="sub">Drop your real images into proof1.png → proof12.png.</p>
       </div>
 
-      <div class="proof-wall reveal">
-        <img src="proof1.png" alt="Proof screenshot 1" loading="lazy" decoding="async">
-        <img src="proof2.png" alt="Proof screenshot 2" loading="lazy" decoding="async">
-        <img src="proof3.png" alt="Proof screenshot 3" loading="lazy" decoding="async">
-        <img src="proof4.png" alt="Proof screenshot 4" loading="lazy" decoding="async">
-        <img src="proof5.png" alt="Proof screenshot 5" loading="lazy" decoding="async">
-        <img src="proof6.png" alt="Proof screenshot 6" loading="lazy" decoding="async">
-        <img src="proof7.png" alt="Proof screenshot 7" loading="lazy" decoding="async">
-        <img src="proof8.png" alt="Proof screenshot 8" loading="lazy" decoding="async">
-        <img src="proof9.png" alt="Proof screenshot 9" loading="lazy" decoding="async">
-        <img src="proof10.png" alt="Proof screenshot 10" loading="lazy" decoding="async">
-        <img src="proof11.png" alt="Proof screenshot 11" loading="lazy" decoding="async">
-        <img src="proof12.png" alt="Proof screenshot 12" loading="lazy" decoding="async">
-      </div>
-    </div>
-  </section>
-
-  <!-- TEXT SECTION -->
-  <section class="section" aria-label="What this means">
-    <div class="container">
-      <div class="reveal">
-        <p class="kicker">What it means</p>
-        <h2 style="font-size:42px; line-height:1.08; letter-spacing:-0.02em; color: var(--ink); max-width: 820px;">
-          Results are a byproduct of a system — not motivation.
-        </h2>
-        <p class="sub" style="max-width:820px; margin-top:10px;">
-          Most businesses already have demand. They just lose it in the gaps:
-          missed calls, slow follow-up, no nurturing, and no tracking.
-          The engine fixes those gaps with a managed team + a repeatable process — so your marketing doesn’t rely on you “being on” every day.
-        </p>
-
-        <div class="support-guarantee" style="margin-top:18px;">
-          <div class="sg-card">
-            <h3>What we install</h3>
-            <ul class="sg-list">
-              <li>Speed-to-lead follow-up</li>
-              <li>Receptionist qualification + booking</li>
-              <li>Nurture for non-responders</li>
-              <li>Reporting that shows ROI</li>
-            </ul>
-          </div>
-
-          <div class="sg-card sg-guarantee">
-            <h3>How we run it</h3>
-            <div class="sg-big">Daily execution</div>
-            <div class="sg-small">
-              We don’t hand you “a strategy”.
-              We run the follow-up, keep the calendar full, and improve the system every week.
-            </div>
-          </div>
-        </div>
+      <div class="proof-wall">
+        <img src="proof1.png" alt="Proof 1" loading="lazy" decoding="async">
+        <img src="proof2.png" alt="Proof 2" loading="lazy" decoding="async">
+        <img src="proof3.png" alt="Proof 3" loading="lazy" decoding="async">
+        <img src="proof4.png" alt="Proof 4" loading="lazy" decoding="async">
+        <img src="proof5.png" alt="Proof 5" loading="lazy" decoding="async">
+        <img src="proof6.png" alt="Proof 6" loading="lazy" decoding="async">
+        <img src="proof7.png" alt="Proof 7" loading="lazy" decoding="async">
+        <img src="proof8.png" alt="Proof 8" loading="lazy" decoding="async">
+        <img src="proof9.png" alt="Proof 9" loading="lazy" decoding="async">
+        <img src="proof10.png" alt="Proof 10" loading="lazy" decoding="async">
+        <img src="proof11.png" alt="Proof 11" loading="lazy" decoding="async">
+        <img src="proof12.png" alt="Proof 12" loading="lazy" decoding="async">
       </div>
     </div>
   </section>
 
-  <!-- WRITTEN REVIEWS (includes Fly Me High ones as text) -->
-  <section class="section section-compare" id="reviews" aria-label="Written reviews">
+  <!-- REVIEWS -->
+  <section class="section section-compare" id="reviews">
     <div class="container">
-      <div class="compare-head reveal">
+      <div class="compare-head">
         <p class="kicker">Reviews</p>
-        <h2>Written reviews from real clients.</h2>
-        <p class="sub">Displayed as text (not images) so it’s readable and searchable.</p>
+        <h2>Written reviews</h2>
+        <p class="sub">Readable + clean — not screenshots of text.</p>
       </div>
 
       <div class="compare-grid">
-        <!-- Review cards styled using existing compare-card -->
-        <article class="compare-card reveal">
+        <article class="compare-card">
           <div class="compare-top">
             <span class="badge good">Review</span>
-            <h3>Nicky M. — No1 Real Estate Agent, West Auckland</h3>
+            <h3>Nicky M. — Real Estate (West Auckland)</h3>
           </div>
-          <p class="sub" style="max-width: 720px;">
-            “John’s leads and system have given us an extra $100k on our bottom line year on year.”
-          </p>
+          <p class="sub">“John’s leads and system have given us an extra $100k on our bottom line year on year.”</p>
         </article>
 
-        <article class="compare-card reveal">
-          <div class="compare-top">
-            <span class="badge good">Review</span>
-            <h3>Carolyn M. — Real Estate Agent, Napier</h3>
-          </div>
-          <p class="sub" style="max-width: 720px;">
-            “John is a sharp, smart mover who gets things done. He is always one step ahead and his word is 100% genuine and always wanting the best for his clients.”
-          </p>
-        </article>
-
-        <article class="compare-card reveal">
-          <div class="compare-top">
-            <span class="badge good">Review</span>
-            <h3>Amanda S. — Real Estate Agent, WGTN</h3>
-          </div>
-          <p class="sub" style="max-width: 720px;">
-            “The leads we’ve been getting have cost us 12% of our gross commission. We’re very happy!”
-          </p>
-        </article>
-
-        <article class="compare-card reveal">
-          <div class="compare-top">
-            <span class="badge good">Review</span>
-            <h3>Rachel J. — CEO, FIJI Yacht Cruises</h3>
-          </div>
-          <p class="sub" style="max-width: 720px;">
-            “Careful what you wish for working with John. He’ll have your business flying in a flash!”
-          </p>
-        </article>
-
-        <article class="compare-card reveal">
+        <article class="compare-card">
           <div class="compare-top">
             <span class="badge good">Review</span>
             <h3>Paul S. — Risk Insurance</h3>
           </div>
-          <p class="sub" style="max-width: 720px;">
-            “I’ve invested 17k for 2019 and my return was $110k. Super happy and just gets better year on year.”
-          </p>
+          <p class="sub">“I invested 17k and my return was $110k. Super happy and it gets better year on year.”</p>
         </article>
 
-        <article class="compare-card reveal">
+        <article class="compare-card">
           <div class="compare-top">
             <span class="badge good">Review</span>
-            <h3>Mike M. — ACC Business Advice</h3>
+            <h3>Mike M. — Business Advice</h3>
           </div>
-          <p class="sub" style="max-width: 720px;">
-            “My site generates 20 to 25 leads a month returning $8k – $10k to me in commission per month. It works!”
-          </p>
+          <p class="sub">“My site generates 20–25 leads a month returning $8k–$10k in commission per month.”</p>
         </article>
       </div>
     </div>
   </section>
 
-  <!-- CALENDAR / BOOKING -->
-  <section class="section section-pricing" id="book" aria-label="Book a call">
+  <!-- BOOK -->
+  <section class="section section-pricing" id="book">
     <div class="container">
-      <div class="pricing-head reveal">
+      <div class="pricing-head">
         <p class="kicker">Book</p>
         <h2>Let’s map your niche engine.</h2>
-        <p class="sub">Pick a time. We’ll show you the exact setup for your business and what to expect.</p>
+        <p class="sub">Pick a time and we’ll show you the setup for your industry.</p>
       </div>
 
-      <div class="pricing-card reveal" style="padding: 18px;">
-        <!-- Calendly inline widget begin -->
+      <div class="pricing-card" style="padding: 18px;">
         <div class="calendly-inline-widget"
              data-url="https://calendly.com/jordan-burkett"
              style="min-width:320px;height:700px;"></div>
-        <script type="text/javascript" src="https://assets.calendly.com/assets/external/widget.js" async></script>
-        <!-- Calendly inline widget end -->
+        <script src="https://assets.calendly.com/assets/external/widget.js" async></script>
       </div>
     </div>
   </section>
@@ -312,10 +191,8 @@
     <div class="container">
       <div class="footer-grid">
         <div class="footer-col">
-          <img src="logo2.png" alt="ONIX Marketing" class="footer-logo" />
-          <p class="footer-desc">
-            A fully managed acquisition + follow-up engine for service businesses.
-          </p>
+          <img src="logo2.png" alt="ONIX" class="footer-logo" />
+          <p class="footer-desc">A fully managed acquisition + follow-up engine for service businesses.</p>
           <div class="footer-badges">
             <span class="f-badge">Receptionist follow-up</span>
             <span class="f-badge">Booked calls</span>
@@ -328,14 +205,7 @@
           <a href="index.html#how">How it works</a>
           <a href="index.html#pricing">Pricing</a>
           <a href="#proof">Proof</a>
-          <a href="#book" data-book>Book a call</a>
-        </div>
-
-        <div class="footer-col">
-          <h4>Results</h4>
-          <a href="#proof">Screenshots</a>
-          <a href="#reviews">Reviews</a>
-          <a href="#book" data-book>Calendar</a>
+          <a href="#book">Book a call</a>
         </div>
 
         <div class="footer-col">
@@ -347,7 +217,7 @@
       </div>
 
       <div class="footer-bottom">
-        <p>© <span id="year"></span> ONIX Marketing. All rights reserved.</p>
+        <p>© <span id="year"></span> ONIX. All rights reserved.</p>
         <p class="footer-promise">If you don’t win work, we don’t get paid.</p>
       </div>
     </div>
