--- a/results.html
+++ b/results.html
@@ -1,213 +1,271 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Results — Onix</title>
-  <meta name="description" content="Real results, proof screenshots, and client feedback." />
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Results — ONIX Marketing</title>
+  <meta name="description" content="Real proof, real reviews, real outcomes. Explore results and book a call." />
+  <link rel="icon" href="logo2.png" type="image/png" />
+
+  <link rel="stylesheet" href="styles.css" />
+
+  <!-- Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700;800;900&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="styles.css" />
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+
+  <!-- Calendly -->
+  <link href="https://assets.calendly.com/assets/external/widget.css" rel="stylesheet">
 </head>
 
 <body>
-  <!-- Site background -->
+  <div id="chartTip" class="chart-tip" aria-hidden="true"></div>
+
   <div class="site-bg" aria-hidden="true">
     <div class="site-aurora"></div>
     <div class="site-noise"></div>
   </div>
 
-  <!-- ✅ Header (same structure + ids) -->
-  <header class="header" role="banner">
+  <!-- HEADER -->
+  <header class="header">
     <div class="header-inner">
-      <a href="index.html#top" aria-label="Home">
-        <!-- Keep your existing logo src exactly (change only if your file path differs) -->
-        <img class="logo" src="logo.png" alt="Onix" />
+      <a href="index.html" aria-label="Go to home">
+        <img src="logo2.png" alt="Acquisition Engine" class="logo" />
       </a>
 
-      <button
-        id="navToggle"
-        class="nav-toggle"
-        type="button"
-        aria-label="Open menu"
-        aria-controls="siteNav"
-        aria-expanded="false">
-        <span class="nav-toggle-icon" aria-hidden="true"></span>
-      </button>
-
-      <nav id="siteNav" class="nav" aria-label="Primary navigation">
-        <a href="index.html#proof">Proof</a>
-        <a href="results.html" aria-current="page">Results</a>
-        <a href="index.html#reviews">Reviews</a>
+      <nav class="nav">
+        <a href="results.html">Results</a>
+        <a href="index.html#how">How it works</a>
+        <a href="index.html#pricing">Pricing</a>
         <a href="#book" class="btn-primary">Book a Call</a>
       </nav>
     </div>
   </header>
 
-  <main id="top">
-    <!-- ✅ Results hero -->
-    <section class="results-hero">
-      <div class="results-hero-inner">
-        <div class="kicker reveal">RESULTS</div>
-        <h1 class="reveal">Real outcomes. Real proof.</h1>
-        <p class="sub reveal">
-          Below are screenshots and client feedback pulled directly from real campaigns and real systems.
-          Scroll the proof strips and book a call when you’re ready.
+  <!-- HERO -->
+  <section class="hero results-hero" id="top">
+    <div class="hero-inner">
+      <div class="hero-copy">
+        <span class="pill">📌 Real proof, not “marketing talk”</span>
+        <h1>Results you can feel.</h1>
+        <p>
+          Screenshots. Reviews. Outcomes.
+          This is what it looks like when follow-up runs daily and your calendar stays full.
         </p>
 
-        <div class="results-actions reveal">
-          <a class="btn-primary large" href="#book">Book a Call</a>
-          <a class="btn-secondary" href="index.html#proof">Back to main proof</a>
+        <div class="hero-cta">
+          <a href="#book" class="btn-primary large">Book a 15-minute call</a>
+          <a href="index.html#how" class="btn-secondary">See the engine</a>
         </div>
       </div>
-    </section>
 
-    <!-- ✅ Proof row (3) -->
-    <section class="section section-proof">
-      <div class="container">
-        <div class="kicker reveal">PROOF SNAPSHOTS</div>
-        <h2 class="reveal">A quick look (3 highlights)</h2>
-        <p class="sub reveal">These are quick highlights — more screenshots below.</p>
-
-        <div class="proof-row3 reveal" aria-label="Three proof screenshots">
-          <figure class="proof-shot">
-            <img src="proof1.png" alt="Proof screenshot 1" loading="lazy" />
-          </figure>
-          <figure class="proof-shot">
-            <img src="proof2.png" alt="Proof screenshot 2" loading="lazy" />
-          </figure>
-          <figure class="proof-shot">
-            <img src="proof3.png" alt="Proof screenshot 3" loading="lazy" />
-          </figure>
-        </div>
-
-        <p class="proof-note reveal">Tip: on mobile, the strips and grids are spaced for clean scrolling.</p>
-      </div>
-    </section>
-
-    <!-- ✅ Reviews as chat bubbles (extracted from flymehigh.com “What My Clients Have To Say?”) -->
-    <section class="section section-textblock" id="reviews">
-      <div class="container">
-        <div class="textblock reveal">
-          <h2>What clients say</h2>
-          <p>
-            Styled as chat bubbles for fast scanning. (Content sourced from the “What My Clients Have To Say?” section.)
-          </p>
-
-          <div class="chat-reviews" aria-label="Chat style reviews">
-            <article class="chat-bubble left">
-              <div class="chat-meta">
-                <span class="chat-name">Nicky M.</span>
-                <span class="chat-tag">No1 Real Estate Agent • West Auckland</span>
-              </div>
-              <p>John’s leads and system have given us an extra $100k on our bottom line year on year</p>
-            </article>
-
-            <article class="chat-bubble right">
-              <div class="chat-meta">
-                <span class="chat-name">Carolyn M.</span>
-                <span class="chat-tag">Real Estate Agent • Napier</span>
-              </div>
-              <p>John is a sharp, smart mover who gets things done. He is always one step ahead and his word is 100% genuine and always wanting the best for his clients</p>
-            </article>
-
-            <article class="chat-bubble left">
-              <div class="chat-meta">
-                <span class="chat-name">Amanda S.</span>
-                <span class="chat-tag">Real Estate Agent • WGTN</span>
-              </div>
-              <p>The leads we’ve been getting have cost us 12% of our gross commission. We’re very happy!</p>
-            </article>
-
-            <article class="chat-bubble right">
-              <div class="chat-meta">
-                <span class="chat-name">Rachel J.</span>
-                <span class="chat-tag">CEO • FIJI Yacht Cruises</span>
-              </div>
-              <p>Careful what you wish for working with John. He’ll have your business flying in a flash!</p>
-            </article>
-
-            <article class="chat-bubble left">
-              <div class="chat-meta">
-                <span class="chat-name">Paul S.</span>
-                <span class="chat-tag">Risk Insurance</span>
-              </div>
-              <p>I’ve invested 17k for 2019 and my return was $110k. Super happy and just gets better year on year.</p>
-            </article>
-
-            <article class="chat-bubble right">
-              <div class="chat-meta">
-                <span class="chat-name">Mike M.</span>
-                <span class="chat-tag">ACC Business Advice</span>
-              </div>
-              <p>My site generates 20 to 25 leads a month returning $8k – $10k to me in commission per month. It works!</p>
-            </article>
+      <div class="hero-visual">
+        <div class="results-card">
+          <div class="results-card-top">
+            <div>
+              <div class="kicker">Quick snapshot</div>
+              <h3 class="results-card-title">What clients notice first</h3>
+            </div>
+            <span class="chip">Proof-first</span>
           </div>
+
+          <ul class="results-bullets">
+            <li>✅ Faster speed-to-lead</li>
+            <li>✅ More booked calls</li>
+            <li>✅ Cleaner pipeline</li>
+            <li>✅ Clear ROI & reporting</li>
+          </ul>
+
+          <a class="btn-primary" href="#book">Book a call</a>
         </div>
       </div>
-    </section>
+    </div>
+  </section>
 
-    <!-- ✅ More proof screenshots -->
-    <section class="section section-proof">
-      <div class="container">
-        <div class="kicker reveal">MORE PROOF</div>
-        <h2 class="reveal">More screenshots (scroll + snap)</h2>
-        <p class="sub reveal">Horizontal strips so nothing stacks into an ugly column on mobile.</p>
-
-        <div class="proof-strip reveal" aria-label="Proof screenshots strip">
-          <img src="proof4.png" alt="Proof screenshot 4" loading="lazy" />
-          <img src="proof5.png" alt="Proof screenshot 5" loading="lazy" />
-          <img src="proof6.png" alt="Proof screenshot 6" loading="lazy" />
-          <img src="proof7.png" alt="Proof screenshot 7" loading="lazy" />
-          <img src="proof8.png" alt="Proof screenshot 8" loading="lazy" />
-          <img src="proof9.png" alt="Proof screenshot 9" loading="lazy" />
-        </div>
-
-        <div class="proof-strip reveal" aria-label="More proof screenshots strip">
-          <img src="proof10.png" alt="Proof screenshot 10" loading="lazy" />
-          <img src="proof11.png" alt="Proof screenshot 11" loading="lazy" />
-          <img src="proof12.png" alt="Proof screenshot 12" loading="lazy" />
-        </div>
-
-        <p class="proof-note reveal">If you want these scattered inside the main site too, just drop the helper blocks anywhere (no layout break).</p>
+  <!-- 3 PROOFS -->
+  <section class="section section-proof" aria-label="Top proof screenshots">
+    <div class="container">
+      <div class="proof-top reveal">
+        <p class="kicker">Proof</p>
+        <h2>Three quick receipts.</h2>
+        <p class="sub">Unedited screenshots from real conversations.</p>
       </div>
-    </section>
 
-    <!-- ✅ Book a call + Calendly -->
-    <section class="section section-textblock" id="book">
-      <div class="container">
-        <div class="textblock reveal">
-          <h2>Book a call</h2>
-          <p>Pick a time that suits you. We’ll map your next 30–60 days and show you what to fix first.</p>
+      <div class="proof-grid reveal">
+        <figure class="proof-card">
+          <img src="proof4.png" alt="Client result screenshot 4" loading="lazy" decoding="async">
+        </figure>
+        <figure class="proof-card">
+          <img src="proof5.png" alt="Client result screenshot 5" loading="lazy" decoding="async">
+        </figure>
+        <figure class="proof-card">
+          <img src="proof6.png" alt="Client result screenshot 6" loading="lazy" decoding="async">
+        </figure>
+      </div>
+    </div>
+  </section>
 
-          <div class="calendly-wrap" aria-label="Calendly scheduling widget">
-            <div
-              class="calendly-inline-widget"
-              data-url="https://calendly.com/jordan-burkett/my-reno-quotes-get-more-jobs-clone-clone-clone?back=1&month=2026-01"
-              style="min-width:320px;height:760px;">
+  <!-- CHAT BUBBLE REVIEWS -->
+  <section class="section section-bubbles" aria-label="Client reviews">
+    <div class="container">
+      <div class="bubbles-head reveal">
+        <p class="kicker">Reviews</p>
+        <h2>What clients have to say.</h2>
+        <p class="sub">Laid out as chat bubbles so it feels human — not “testimonial cards”.</p>
+      </div>
+
+      <div class="bubbles reveal">
+        <article class="bubble bubble-left">
+          <div class="bubble-inner">
+            <p>John’s leads and system have given us an extra $100k on our bottom line year on year</p>
+            <div class="bubble-meta">
+              <strong>Nicky M.</strong>
+              <span>No1 Real Estate Agent West Auckland</span>
             </div>
           </div>
+        </article>
+
+        <article class="bubble bubble-right">
+          <div class="bubble-inner">
+            <p>John is a sharp, smart mover who gets things done. He is always one step ahead and his word is 100% genuine and always wanting the best for his clients</p>
+            <div class="bubble-meta">
+              <strong>Carolyn M.</strong>
+              <span>Real Estate Agent Napier</span>
+            </div>
+          </div>
+        </article>
+
+        <article class="bubble bubble-left">
+          <div class="bubble-inner">
+            <p>The leads we’ve been getting have cost us 12% of our gross commission. We’re very happy!</p>
+            <div class="bubble-meta">
+              <strong>Amanda S.</strong>
+              <span>Real Estate Agent WGTN</span>
+            </div>
+          </div>
+        </article>
+
+        <article class="bubble bubble-right">
+          <div class="bubble-inner">
+            <p>Careful what you wish for working with John. He’ll have your business flying in a flash!</p>
+            <div class="bubble-meta">
+              <strong>Rachel J.</strong>
+              <span>CEO FIJI Yacht Cruises</span>
+            </div>
+          </div>
+        </article>
+
+        <article class="bubble bubble-left">
+          <div class="bubble-inner">
+            <p>I’ve invested 17k for 2019 and my return was $110k. Super happy and just gets better year on year.</p>
+            <div class="bubble-meta">
+              <strong>Paul S.</strong>
+              <span>Risk Insurance</span>
+            </div>
+          </div>
+        </article>
+
+        <article class="bubble bubble-right">
+          <div class="bubble-inner">
+            <p>My site generates 20 to 25 leads a month returning $8k – $10k to me in commission per month. It works!</p>
+            <div class="bubble-meta">
+              <strong>Mike M.</strong>
+              <span>ACC Business Advice</span>
+            </div>
+          </div>
+        </article>
+      </div>
+    </div>
+  </section>
+
+  <!-- MORE PROOF -->
+  <section class="section section-proofwall" aria-label="More proof screenshots">
+    <div class="container">
+      <div class="proofwall-head reveal">
+        <p class="kicker">More proof</p>
+        <h2>Scroll the receipts.</h2>
+        <p class="sub">More screenshots, same story: booked calls and clean follow-up.</p>
+      </div>
+
+      <div class="proof-wall reveal">
+        <img src="proof7.png" alt="Client result screenshot 7" loading="lazy" decoding="async">
+        <img src="proof8.png" alt="Client result screenshot 8" loading="lazy" decoding="async">
+        <img src="proof9.png" alt="Client result screenshot 9" loading="lazy" decoding="async">
+        <img src="proof10.png" alt="Client result screenshot 10" loading="lazy" decoding="async">
+        <img src="proof11.png" alt="Client result screenshot 11" loading="lazy" decoding="async">
+        <img src="proof12.png" alt="Client result screenshot 12" loading="lazy" decoding="async">
+      </div>
+    </div>
+  </section>
+
+  <!-- BOOKING -->
+  <section class="section section-book" id="book" aria-label="Book a call">
+    <div class="container">
+      <div class="book-head reveal">
+        <p class="kicker">Book a call</p>
+        <h2>Want this running for your business?</h2>
+        <p class="sub">
+          Pick a time below — we’ll map your pipeline, your follow-up, and exactly what to install.
+        </p>
+      </div>
+
+      <div class="book-card reveal">
+        <div
+          class="calendly-inline-widget"
+          data-url="https://calendly.com/jordan-burkett/my-reno-quotes-get-more-jobs-clone-clone?back=1&month=2026-01"
+          style="min-width:320px;height:780px;"
+        ></div>
+      </div>
+    </div>
+  </section>
+
+  <!-- FOOTER (FULL) -->
+  <footer class="footer">
+    <div class="container">
+      <div class="footer-grid">
+        <div class="footer-col">
+          <img src="logo2.png" alt="Acquisition Engine" class="footer-logo" />
+          <p class="footer-desc">
+            A fully managed acquisition + follow-up engine for tradies, solar, agencies, and service businesses.
+          </p>
+          <div class="footer-badges">
+            <span class="f-badge">Receptionist follow-up</span>
+            <span class="f-badge">Booked calls</span>
+            <span class="f-badge">ROI reporting</span>
+          </div>
+        </div>
+
+        <div class="footer-col">
+          <h4>Product</h4>
+          <a href="results.html">Results</a>
+          <a href="index.html#how">How it works</a>
+          <a href="index.html#pricing">Pricing</a>
+          <a href="#book">Book a call</a>
+        </div>
+
+        <div class="footer-col">
+          <h4>Company</h4>
+          <a href="index.html">Home</a>
+          <a href="index.html#proof">Why us</a>
+          <a href="#book">Contact</a>
+          <a href="#book">Support</a>
+        </div>
+
+        <div class="footer-col">
+          <h4>Legal</h4>
+          <a href="privacy.html">Privacy Policy</a>
+          <a href="terms.html">Terms of Service</a>
+          <a href="cookies.html">Cookie Policy</a>
         </div>
       </div>
-    </section>
 
-    <!-- ✅ Footer (keep your exact footer if you already have one)
-         If your main site has a footer, paste it here unchanged.
-         This placeholder is intentionally minimal and safe. -->
-    <footer class="section" style="padding-top:40px; padding-bottom:40px;">
-      <div class="container" style="display:flex; gap:12px; flex-wrap:wrap; align-items:center; justify-content:space-between;">
-        <div style="color:var(--muted2); font-weight:750;">© <span id="yr"></span> Onix</div>
-        <div style="display:flex; gap:14px; flex-wrap:wrap;">
-          <a href="index.html#top" style="text-decoration:none; color:rgba(12,10,27,0.78); font-weight:850;">Home</a>
-          <a href="index.html#proof" style="text-decoration:none; color:rgba(12,10,27,0.78); font-weight:850;">Proof</a>
-          <a href="#book" style="text-decoration:none; color:rgba(12,10,27,0.78); font-weight:850;">Book</a>
-        </div>
+      <div class="footer-bottom">
+        <p>© <span id="year"></span> Acquisition Engine. All rights reserved.</p>
+        <p class="footer-promise">If you don’t win work, we don’t get paid.</p>
       </div>
-    </footer>
-  </main>
+    </div>
+  </footer>
 
-  <!-- Calendly embed script -->
   <script src="https://assets.calendly.com/assets/external/widget.js" async></script>
   <script src="script.js"></script>
 </body>
