--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
 
       <nav class="nav" aria-label="Primary navigation">
         <a href="#proof">Results</a>
+        <a href="results.html">Results Page</a>
         <a href="#how">How it works</a>
         <a href="#pricing">Pricing</a>
         <a href="#book" class="btn-primary">Book a Call</a>
@@ -628,3 +629,4 @@
   <script src="script.js"></script>
 </body>
 </html>
+
